Fix MLflow URLs and update README & Project Report (#1)
* Refactor .gitignore to remove unused patterns

Removed unnecessary entries from .gitignore and cleaned up the file.

* add docker file docker compose

* add docker file docker compose

* add docker file docker compose

* Update .gitignore to exclude large data files

* Initialize DVC

* Track dataset under data/static with DVC

* Configure Google Drive as DVC remote

* Enable DVC autostage

* add mlflow and updates reporting

* mlflow fixes

* Final version of README and RAPPORT

---------

Co-authored-by: Yasmine Gorrab <86982156+MiiN1136@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,36 @@
+# Python & Environnement
 venv/
 env/
 __pycache__/
 .env
 .flaskenv
+*.pyc
+
+# Fichiers Binaires et Bibliothèques (Tes fichiers lourds)
+*.pyd
+*.dll
+*.so
+*.exe
+
+# Fichiers de données (À gérer avec DVC)
 *.pkl
+*.pickle
+images.pkl
+data.pickle
 
-
-person.jpg
+# Images
 *.jpg
 *.png
 *.jpeg
 *.gif
 
-# Ignore les dossiers de données d'images
+# Dossiers spécifiques
 examples/
 static/asterix/
-
-
 tmp/
-
-.ipynb_checkpoints
 .vscode/
 .idea/
-
-.DS_Store
-Thumbs.db
+human_study_data/
+data/
+/data
+temporal-ring-478309-g7-e65a0025d09a.json
