--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,12 @@ __pycache__/
 images.pkl
 data.pickle
 
-# Images
-*.jpg
-*.png
-*.jpeg
-*.gif
+# Fichiers de données (À gérer avec DVC)
+*.pkl
+*.pickle
+images.pkl
+data.pickle
+
 
 # Dossiers spécifiques
 examples/
